[gd_scene load_steps=19 format=3 uid="uid://coelehn1hnbxh"]

[ext_resource type="Script" uid="uid://b4g4882u004tk" path="res://Scripts/pay_view.gd" id="1_3gnla"]
[ext_resource type="FontFile" uid="uid://cklnct7lhakjq" path="res://Assets/Fonts/SometypeMono-VariableFont_wght.ttf" id="1_pwtuc"]
[ext_resource type="Texture2D" uid="uid://bcg0463xcvfd0" path="res://Assets/UI/ButtonDefaultRounded.png" id="2_3gnla"]
[ext_resource type="Texture2D" uid="uid://c5cvt3b1w4qj6" path="res://Assets/UI/ButtonActiveRounded.png" id="4_0vw3u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0vw3u"]
bg_color = Color(0.101961, 0.0941176, 0.211765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mbh3x"]
bg_color = Color(0.321569, 0, 0.694118, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_61mc2"]
bg_color = Color(0.206002, 0.193517, 0.386287, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1sqhb"]
texture = ExtResource("2_3gnla")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1fknb"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1sqhb"]
bg_color = Color(0.101961, 0.0941176, 0.211765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5cba5"]
bg_color = Color(0.320369, 0.00120038, 0.692429, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0vw3u"]
texture = ExtResource("4_0vw3u")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mbh3x"]
texture = ExtResource("4_0vw3u")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f4dhr"]
texture = ExtResource("4_0vw3u")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pwtuc"]
bg_color = Color(0.94902, 0.223529, 0, 0.623529)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jxk6o"]
bg_color = Color(0.101961, 0.0941176, 0.211765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nw5f7"]
bg_color = Color(0.321569, 0, 0.694118, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5ucno"]
texture = ExtResource("2_3gnla")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_3gnla")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1600.0
offset_bottom = 900.0

[node name="PanelContainerCalculator" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 810.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0vw3u")

[node name="Panel" type="Panel" parent="Control/PanelContainerCalculator"]
custom_minimum_size = Vector2(470, 780)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 1.98
theme_override_styles/panel = SubResource("StyleBoxFlat_mbh3x")

[node name="PanelProductos" type="Panel" parent="Control/PanelContainerCalculator/Panel"]
layout_mode = 0
offset_left = 33.0
offset_top = 17.0
offset_right = 441.0
offset_bottom = 497.0
theme_override_styles/panel = SubResource("StyleBoxFlat_61mc2")

[node name="LabelListProductos" type="Label" parent="Control/PanelContainerCalculator/Panel/PanelProductos"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.017
anchor_right = 1.0
anchor_bottom = 0.067
offset_left = 8.0
offset_top = -0.160001
offset_right = -8.0
offset_bottom = -0.16
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_pwtuc")
text = "Lista de productos:"

[node name="ScrollContainer" type="ScrollContainer" parent="Control/PanelContainerCalculator/Panel/PanelProductos"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.081
anchor_right = 0.968
anchor_bottom = 0.977
offset_left = -0.160001
offset_top = 0.119999
offset_right = 0.0559692
offset_bottom = 0.039978

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainerCalculator/Panel/PanelProductos/ScrollContainer"]
layout_mode = 2
theme_override_constants/v_separation = 60

[node name="PanelCalculator" type="Panel" parent="Control/PanelContainerCalculator/Panel"]
layout_mode = 0
offset_left = 33.0
offset_top = 516.0
offset_right = 441.0
offset_bottom = 756.0
theme_override_styles/panel = SubResource("StyleBoxFlat_61mc2")

[node name="NumSymbolCalculator" type="GridContainer" parent="Control/PanelContainerCalculator/Panel/PanelCalculator"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 0
offset_left = 34.0
offset_top = 56.0
offset_right = 366.0
offset_bottom = 236.0
columns = 4

[node name="ButtonNum7" type="Button" parent="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_1sqhb")
text = "7"

[node name="ButtonNum8" type="Button" parent="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_1sqhb")
text = "8"

[node name="ButtonNum9" type="Button" parent="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_1sqhb")
text = "9"

[node name="ButtonC" type="Button" parent="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_1sqhb")
text = "C"

[node name="ButtonNum4" type="Button" parent="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_1sqhb")
text = "4"

[node name="ButtonNum5" type="Button" parent="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_1sqhb")
text = "5"

[node name="ButtonNum6" type="Button" parent="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_1sqhb")
text = "6"

[node name="ButtonSymbolPlus" type="Button" parent="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_1sqhb")
text = "+"

[node name="ButtonNum1" type="Button" parent="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_1sqhb")
text = "1"

[node name="ButtonNum2" type="Button" parent="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_1sqhb")
text = "2"

[node name="ButtonNum3" type="Button" parent="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_1sqhb")
text = "3"

[node name="ButtonSymbolMinus" type="Button" parent="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_1sqhb")
text = "-"

[node name="ButtonSymbolEqual" type="Button" parent="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_1sqhb")
text = "="

[node name="ButtonNum0" type="Button" parent="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_1sqhb")
text = "0"

[node name="ButtonSymbolDecimal" type="Button" parent="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_1sqhb")
text = ","

[node name="ButtonSymbolPercent" type="Button" parent="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_1sqhb")
text = "%	"

[node name="SuperiorButton" type="GridContainer" parent="Control/PanelContainerCalculator/Panel/PanelCalculator"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = 8.0
offset_right = -42.0
offset_bottom = -184.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 10
size_flags_vertical = 3
columns = 4

[node name="CalculatorLabel" type="Label" parent="Control/PanelContainerCalculator/Panel/PanelCalculator/SuperiorButton"]
unique_name_in_owner = true
custom_minimum_size = Vector2(330, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1fknb")
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PanelContainerProductsList" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_left = 498.0
offset_right = 1600.0
offset_bottom = 810.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1sqhb")

[node name="Panel" type="Panel" parent="Control/PanelContainerProductsList"]
custom_minimum_size = Vector2(810, 780)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_5cba5")

[node name="ScrollContainer" type="ScrollContainer" parent="Control/PanelContainerProductsList/Panel"]
layout_mode = 0
offset_left = 69.0
offset_top = 189.0
offset_right = 728.0
offset_bottom = 766.0

[node name="payContainer" type="GridContainer" parent="Control/PanelContainerProductsList/Panel/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50

[node name="Efectivo" type="Button" parent="Control/PanelContainerProductsList/Panel/ScrollContainer/payContainer"]
custom_minimum_size = Vector2(650, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pwtuc")
theme_override_styles/focus = SubResource("StyleBoxTexture_0vw3u")
text = "Efectivo"

[node name="Tarjeta" type="Button" parent="Control/PanelContainerProductsList/Panel/ScrollContainer/payContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pwtuc")
theme_override_styles/focus = SubResource("StyleBoxTexture_mbh3x")
text = "Tarjeta"

[node name="NoPagado" type="Button" parent="Control/PanelContainerProductsList/Panel/ScrollContainer/payContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pwtuc")
theme_override_styles/focus = SubResource("StyleBoxTexture_f4dhr")
theme_override_styles/normal = SubResource("StyleBoxFlat_pwtuc")
text = "No Pagado"

[node name="PanelContainerOthersButtons" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_top = 810.0
offset_right = 1600.0
offset_bottom = 900.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jxk6o")

[node name="Panel" type="Panel" parent="Control/PanelContainerOthersButtons"]
custom_minimum_size = Vector2(1570, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_nw5f7")

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainerOthersButtons/Panel"]
layout_mode = 0
offset_right = 1739.0
offset_bottom = 81.0
columns = 10

[node name="ButtonPrint" type="Button" parent="Control/PanelContainerOthersButtons/Panel/GridContainer"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxTexture_5ucno")
text = "Imprimir"

[node name="ButtonDelete" type="Button" parent="Control/PanelContainerOthersButtons/Panel/GridContainer"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxTexture_5ucno")
text = "Borrar"

[node name="ButtonAddNotes" type="Button" parent="Control/PanelContainerOthersButtons/Panel/GridContainer"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxTexture_5ucno")
text = "Añadir nota
"

[node name="ButtonTickets" type="Button" parent="Control/PanelContainerOthersButtons/Panel/GridContainer"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxTexture_5ucno")
text = "Tickets"

[node name="ButtonOpenBox" type="Button" parent="Control/PanelContainerOthersButtons/Panel/GridContainer"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxTexture_5ucno")
text = "Abrir cajón"

[node name="ButtonChangeTable" type="Button" parent="Control/PanelContainerOthersButtons/Panel/GridContainer"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxTexture_5ucno")
text = "Cambiar mesa"

[node name="ButtonSplitTicket" type="Button" parent="Control/PanelContainerOthersButtons/Panel/GridContainer"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxTexture_5ucno")
text = "Dividir ticket"

[node name="ButtonPays" type="Button" parent="Control/PanelContainerOthersButtons/Panel/GridContainer"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxTexture_5ucno")
text = "Pagos"

[node name="ButtonLogout" type="Button" parent="Control/PanelContainerOthersButtons/Panel/GridContainer"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxTexture_5ucno")
text = "Cerrar sesión"

[connection signal="pressed" from="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator/ButtonNum7" to="." method="_on_button_num_7_pressed"]
[connection signal="pressed" from="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator/ButtonNum8" to="." method="_on_button_num_8_pressed"]
[connection signal="pressed" from="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator/ButtonNum9" to="." method="_on_button_num_9_pressed"]
[connection signal="pressed" from="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator/ButtonC" to="." method="_on_button_c_pressed"]
[connection signal="pressed" from="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator/ButtonNum4" to="." method="_on_button_num_4_pressed"]
[connection signal="pressed" from="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator/ButtonNum5" to="." method="_on_button_num_5_pressed"]
[connection signal="pressed" from="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator/ButtonNum6" to="." method="_on_button_num_6_pressed"]
[connection signal="pressed" from="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator/ButtonSymbolPlus" to="." method="_on_button_symbol_plus_pressed"]
[connection signal="pressed" from="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator/ButtonNum1" to="." method="_on_button_num_1_pressed"]
[connection signal="pressed" from="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator/ButtonNum2" to="." method="_on_button_num_2_pressed"]
[connection signal="pressed" from="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator/ButtonNum3" to="." method="_on_button_num_3_pressed"]
[connection signal="pressed" from="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator/ButtonSymbolMinus" to="." method="_on_button_symbol_minus_pressed"]
[connection signal="pressed" from="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator/ButtonSymbolEqual" to="." method="_on_button_symbol_equal_pressed"]
[connection signal="pressed" from="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator/ButtonNum0" to="." method="_on_button_num_0_pressed"]
[connection signal="pressed" from="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator/ButtonSymbolDecimal" to="." method="_on_button_symbol_decimal_pressed"]
[connection signal="pressed" from="Control/PanelContainerCalculator/Panel/PanelCalculator/NumSymbolCalculator/ButtonSymbolPercent" to="." method="_on_button_symbol_percent_pressed"]
[connection signal="pressed" from="Control/PanelContainerProductsList/Panel/ScrollContainer/payContainer/Efectivo" to="." method="_on_button_cash_pressed"]
[connection signal="pressed" from="Control/PanelContainerProductsList/Panel/ScrollContainer/payContainer/Tarjeta" to="." method="_on_button_card_pressed"]
[connection signal="pressed" from="Control/PanelContainerProductsList/Panel/ScrollContainer/payContainer/NoPagado" to="." method="_on_button_not_paid_pressed"]
[connection signal="pressed" from="Control/PanelContainerOthersButtons/Panel/GridContainer/ButtonChangeTable" to="." method="_on_button_change_table_pressed"]
[connection signal="pressed" from="Control/PanelContainerOthersButtons/Panel/GridContainer/ButtonLogout" to="." method="_on_button_logout_pressed"]
